@@ -1,1 +1,1 @@
-1.8.3-rc3
+1.8.3
